backend/product-service/k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: product-service
  labels:
    app: product-service
spec:
  selector:
    app: product-service
  ports:
    - port: 80
      targetPort: 8003
      protocol: TCP
  type: ClusterIP
